# picocoin

./: .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  ChangeLog  LICENSE-3RD-PARTY.md  Makefile.am  NEWS  README  README.md  TODO  address.c  address.h  aes.c  autogen.sh  base58.c  base58.h  bignum.c  blkdb.c  blkdb.h  buffer.h  buint.c  configure.ac  core.c  core.h  coredefs.c  coredefs.h  dns.c  hexcode.c  hexcode.h  key.c  key.h  main.c  mbr.c  mbr.h  message.c  message.h  net.c  peerman.c  (+8 more)
contrib/debian/: README.source  changelog  control  rules
debian/: README.Debian  changelog  control  copyright  docs  rules  shlibs.local
doc/: Makefile.am  PRNG.md  build-osx.md  openbsd.txt  valgrind.txt
include/: Makefile.am
include/ccoin/: Makefile.am  addr_match.h  address.h  base58.h  blkdb.h  bloom.h  buffer.h  buint.h  checkpoints.h  clist.h  compat.h  core.h  coredefs.h  cstr.h  endian.h  hashtab.h  hdkeys.h  hexcode.h  key.h  log.h  mbr.h  message.h  net.h  parr.h  script.h  script_eval.h  serialize.h  util.h  wallet.h
include/ccoin/crypto/: aes_util.h  fortuna.h  hmac.h  prng.h  rijndael.h  ripemd160.h  sha1.h  sha2.h
include/ccoin/net/: asocket.h  dns.h  fakepoll.h  net.h  netbase.h  peerman.h
lib/: .gitignore  Makefile.am  addr_match.c  address.c  base58.c  bignum.c  blkdb.c  block.c  blockfile.c  bloom.c  buffer.c  buint.c  checkpoints.c  clist.c  core.c  coredefs.c  cstr.c  dns.c  file_seq.c  hashtab.c  hdkeys.c  hexcode.c  key.c  keyset.c  keystore.c  log.c  mbr.c  memmem.c  message.c  net.c  parr.c  script.c  script_eval.c  script_names.c  script_sign.c  serialize.c  util.c  utxo.c  wallet.c
lib/crypto/: aes_util.c  ctaes.c  fortuna.c  hmac.c  prng.c  random.c  rijndael.c  ripemd160.c  sha1.c  sha2.c
lib/net/: asocket.c  dns.c  net.c  netbase.c  peerman.c
m4/: .gitignore  Makefile.am
src/: .gitignore  Makefile.am  aes.c  blkscan.c  blkstats.c  brd.c  brd.h  main.c  net.c  peerman.c  peerman.h  picocoin.h  rawtx.c  txmod.c  wallet.c  wallet.h
test/: .gitignore  Makefile.am  aes-util.c  base58.c  blk120383.ser  blkdb.c  blks10.ser  block.c  blockfile.c  bloom.c  chain-verf.c  clist.c  coredefs.c  crypto.c  cstr.c  ctaes.c  fileio.c  hash.c  hashtab.c  hdkeys.c  hex.c  keyset.c  keystore.c  libtest.c  libtest.h  mbr.c  message.c  misc.c  net.c  parr.c  prng.c  script-parse.c  script.c  script_invalid.json  script_tests.json  script_valid.json  sighash.c  tn_blk35133.ser  tn_blk35138.ser  tx-valid.c  (+7 more)
test/data/: Makefile.am  blk0.json  blk0.ser  blk120383.json  random.data  tn_hdr35141.ser  tx3e0dc3da.json  tx3e0dc3da.ser  wallet-basics.json
