
INCLUDES	= @GLIB_CFLAGS@ -I$(top_srcdir)/include

noinst_LIBRARIES= libccoin.a

libccoin_a_SOURCES=	\
	address.c	\
	addr_match.c	\
	base58.c	\
	bignum.c	\
	blkdb.c		\
	block.c		\
	bloom.c		\
	buffer.c	\
	buint.c		\
	core.c		\
	coredefs.c	\
	dns.c		\
	hexcode.c	\
	file_seq.c	\
	key.c		\
	keyset.c	\
	keystore.c	\
	mbr.c		\
	memmem.c	\
	message.c	\
	script.c	\
	script_eval.c	\
	script_names.c	\
	script_sign.c	\
	serialize.c	\
	util.c		\
	utxo.c

