
AM_CPPFLAGS	= -I$(top_srcdir)/include

noinst_LIBRARIES= libccoin.a

libccoin_a_SOURCES=	\
	address.c	\
	addr_match.c	\
	base58.c	\
	bignum.c	\
	blkdb.c		\
	block.c		\
	blockfile.c	\
	bloom.c		\
	buffer.c	\
	buint.c		\
	checkpoints.c	\
	clist.c		\
	core.c		\
	coredefs.c	\
	cstr.c		\
	dns.c		\
	hdkeys.c	\
	hexcode.c	\
	file_seq.c	\
	hashtab.c	\
	key.c		\
	keyset.c	\
	keystore.c	\
	mbr.c		\
	memmem.c	\
	message.c	\
	net.c		\
	parr.c		\
	script.c	\
	script_eval.c	\
	script_names.c	\
	script_sign.c	\
	serialize.c	\
	util.c		\
	utxo.c		\
	wallet.c

