
ccoinincludedir=$(includedir)/ccoin

ccoininclude_HEADERS = \
	address.h	\
	addr_match.h	\
	base58.h	\
	blkdb.h		\
	bloom.h		\
	buffer.h	\
	buint.h		\
	checkpoints.h	\
	clist.h		\
	compat.h	\
	coredefs.h	\
	core.h		\
	cstr.h		\
	endian.h	\
	hashtab.h	\
	hdkeys.h	\
	hexcode.h	\
	key.h		\
	mbr.h		\
	message.h	\
	parr.h		\
	script.h	\
	serialize.h	\
	util.h		\
	wallet.h

ccoinnetincludedir=$(includedir)/ccoin/net

ccoinnetinclude_HEADERS = \
    net/dns.h	\
    net/fakepoll.h	\
    net/net.h	\
    net/netbase.h	\
    net/peerman.h
