
ccoinincludedir=$(includedir)/ccoin

ccoininclude_HEADERS = \
	crypto/hmac.h	\
	crypto/ripemd160.h	\
	crypto/sha1.h	\
	crypto/sha2.h	\
	address.h	\
	addr_match.h	\
	base58.h	\
	blkdb.h		\
	bloom.h		\
	buffer.h	\
	buint.h		\
	checkpoints.h	\
	clist.h		\
	compat.h	\
	coredefs.h	\
	core.h		\
	cstr.h		\
	endian.h	\
	hashtab.h	\
	hdkeys.h	\
	hexcode.h	\
	key.h		\
	log.h		\
	mbr.h		\
	message.h	\
	parr.h		\
	script.h	\
	serialize.h	\
	util.h		\
	wallet.h

ccoinnetincludedir=$(includedir)/ccoin/net

ccoinnetinclude_HEADERS = \
    net/asocket.h	\
    net/dns.h	\
    net/fakepoll.h	\
    net/net.h	\
    net/netbase.h	\
    net/peerman.h

ccoinaesincludedir = $(includedir)/ccoin/crypto

ccoinaesinclude_HEADERS =	\
    crypto/aes_util.h   \
    crypto/ctaes.h

