
EXTRA_DIST = \
	base58_encode_decode.json	\
	base58_keys_invalid.json base58_keys_valid.json		\
	blk0.json blk0.ser blks10.ser \
	blk120383.json blk120383.ser \
	hdr193000.ser tn_hdr35141.ser \
	random.data script_tests.json sighash.json \
	tn_blk35133.ser tx3e0dc3da.json tx3e0dc3da.ser \
	tx_invalid.json tx_valid.json \
	wallet-basics.json
